fix: adjust overflow wrap in cards

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -134,6 +134,7 @@ $component: "c-card";
 	&__title-wrapper {
 		flex-grow: 1;
 		min-width: 0;
+		overflow-wrap: break-word;
 	}
 
 	&__toolbar-wrapper {
